--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "node-debugging-proxy",
+  "name": "debug-proxy",
   "repository": {
     "type": "git",
-    "url": "https://github.com/flotwig/node-debugging-proxy.git"
+    "url": "https://github.com/flotwig/node-debug-proxy.git"
   },
-  "homepage": "https://github.com/flotwig/node-debugging-proxy",
-  "version": "1.0.0",
+  "homepage": "https://github.com/flotwig/node-debug-proxy",
+  "version": "1.0.3",
   "main": "index.js",
   "license": "MIT",
   "bin": {
-    "debugging-proxy": "./bin/debugging-proxy"
+    "debug-proxy": "./bin/debug-proxy"
   },
   "dependencies": {
     "debug": "^4.1.1",
